--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0; url=base.html" />
+  <meta http-equiv="refresh" content="0; url=optic/templates/base.html" />
   <title>Redirecting...</title>
 </head>
 <body>
-  If you are not redirected automatically, <a href="base.html">click here</a>.
+  If you are not redirected automatically, <a href="optic/templates/base.html">click here</a>.
 </body>
 </html>
